# mcp-rag

./: .env.example  .gitignore  README.md  loader.py  pyproject.toml  requirements.txt  server.py
app/: logging_config.py  schemas.py  settings.py
app/domain/: __init__.py  interfaces.py  models.py
app/infrastructure/: __init__.py  document_storage.py  embedders.py  storage.py
app/parsers/: __init__.py  confluence.py  file.py
docs/: retriever-guide.json  retriever-guide.md
tests/: test_confluence_parser.py  test_document_storage.py  test_domain_models.py  test_e2e_mcp_stdio.py  test_embedders.py  test_loader.py  test_logging_config.py  test_schemas.py  test_server.py  test_settings.py  test_storage.py
